<resources>
    <string name="app_name">App One</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="submit">submit</string>
    <string name="notepad">Notepad</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="website">Website</string>
    <string name="to_do_list">to do list</string>
    <string name="reminder">reminder</string>
    <string name="note">note</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note">add note</string>
    <string name="logout">logout</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="save">save</string>
    <string name="add_success">Note Added Successfully</string>
    <string name="add_error">Error adding new note</string>
    <string name="location">location</string>
    <string name="get_name">get name</string>
</resources>