<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_contact"
        android:title="@string/contact_us"/>
    <item
        android:id="@+id/item_about"
        android:title="@string/about_us"/>
    <item
        android:id="@+id/item_exit"
        android:title="@string/exit"/>
    <item
        android:icon="@drawable/ic_baseline_search_24"
        android:id="@+id/item_search"
        android:title="@string/search"
        app:iconTint="@color/white"
        app:showAsAction="always"/>
<item
    android:icon="@drawable/ic_baseline_web_24"
    app:iconTint="@color/white"
    android:id="@+id/item_web"
    android:title="@string/website"
    app:showAsAction="always"/>




</menu>